--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.container h1,h2{
+  color: #00BCD4;
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -25,11 +27,26 @@ table td {
   border: 1px solid #ddd;
   padding: 10px;
   text-align: center;
+  color: #00BCD4;
 }
 
 input[type="number"] {
-  width: 90%;
-  padding: 5px;
+    width: 80%;
+    padding: 7px 5px;
+    border-radius: 3px;
+    border: 1px solid #b2ebf2;
+    color: #00BCD4;
+}
+input:focus {
+    outline: none;
+    border-color: #00BCD4;
+}
+.kib_col_delete_btn {
+    padding: 1px 10px;
+    border-radius: 5px;
+    border: 0px;
+    color: #ffffff;
+    background-color: #F06292;
 }
 
 #addRowBtn,
@@ -38,9 +55,18 @@ input[type="number"] {
   margin-right: 10px;
   cursor: pointer;
   border: none;
-  background: #007bff;
+  background: #00BCD4;
   color: #fff;
   border-radius: 5px;
+}
+
+
+.data_input_field {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: stretch;
 }
 
 #addRowBtn:hover,
@@ -57,10 +83,11 @@ input[type="number"] {
     font-size: 25px;
     font-weight: normal;
     padding: 25px;
+    color: #00BCD4;
 }
 
 #resultValue.green {
-  color: green;
+  color: #22ff02;
   font-weight: bold;
 }
 
@@ -93,10 +120,11 @@ input[type="number"] {
     align-items: flex-start;
     flex-direction: column;
     font-size: 10px;
+    color: #00BCD4;
 }
 
 .add_row_col_btn_area>button{
-    background-color: #007bff;
+    background-color: #00BCD4;
     border-radius: 5px;
     padding: 7px 11px;
     border: none;
@@ -136,7 +164,7 @@ input[type="number"] {
   border-radius: 50%;
 }
 input:checked + .slider {
-  background-color: #4cd964;
+  background-color: #00BCD4;
 }
 input:checked + .slider:before {
   transform: translateX(26px);
