--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-  width: 500px;
+  /* width: 500px; */
   margin: auto;
   background: #fff;
   padding: 20px;
@@ -104,6 +104,7 @@ input:focus {
     justify-content: space-around;
     align-items: center;
     margin-bottom: 25px;
+    gap: 3px;
 }
 .all_btn_box {
     display: flex;
